--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-node_modules
-build
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# secrets
 secrets.*.js
