upgrade to React 16 / fix .babelrc / adjust folder structure

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,9 +8,18 @@
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
   },
+  "chrome_url_overrides": {
+      "newtab": "newtab.html"
+  },
   "icons": {
     "128": "icon-128.png"
   },
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "<all_urls>",
+    "background"
+  ],
   "manifest_version": 2,
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
